--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "appstract/laravel-opcache": "^1.2",
+        "darkaonline/l5-swagger": "5.5.*",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
@@ -36,6 +37,7 @@
     "extra": {
         "laravel": {
             "dont-discover": [
+                "darkaonline/l5-swagger"
             ]
         }
     },
